# lingmo-portals

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  package.yml
debian/: changelog  control  copyright  liblingmoportals-dev.install  liblingmoportals1.install
include/lingmo-portals/: export.h
rpm/: lingmo-portals.spec
src/: main.cpp
